[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Piun"
description = "Podman Image Update Notifier"
readme = "README.rst"
license = "GPL-3.0-or-later"
dynamic = ["version"]
license-files = [
	"LICENSE",
]
requires-python = ">=3.11"
dependencies = [
	"pyyaml>=6.0",
	"apprise>=1.9",
]

[project.scripts]
piun = "piun:main"
